#782570 by bleen18: Fixed Drupal messages get cut off in the overlay.

--- a/css/style.css
+++ b/css/style.css
@@ -926,6 +926,9 @@ div.password-suggestions {
  display: block;
  float: none;
 }
+.overlay #messages {
+  width: auto;
+}
 
 
 /* ---------- Poll ----------- */
